update to main as PR is merged

--- a/.github/workflows/_binary-build-linux.yml
+++ b/.github/workflows/_binary-build-linux.yml
@@ -187,9 +187,9 @@ jobs:
       - name: Checkout pytorch/builder to builder dir
         uses: malfet/checkout@silent-checkout
         with:
-          ref: tl-124-arm
+          ref: main
           submodules: recursive
-          repository: tinglvv/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
 
