run regenerate.sh

--- a/.github/workflows/generated-linux-binary-manywheel-nightly.yml
+++ b/.github/workflows/generated-linux-binary-manywheel-nightly.yml
@@ -401,15 +401,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout tinglvv/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: tl-124-arm
+          ref: main
           submodules: recursive
-          repository: tinglvv/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean tinglvv/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -504,15 +504,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout tinglvv/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: tl-124-arm
+          ref: main
           submodules: recursive
-          repository: tinglvv/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean tinglvv/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -916,15 +916,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout tinglvv/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: tl-124-arm
+          ref: main
           submodules: recursive
-          repository: tinglvv/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean tinglvv/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -1019,15 +1019,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout tinglvv/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: tl-124-arm
+          ref: main
           submodules: recursive
-          repository: tinglvv/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean tinglvv/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -1431,15 +1431,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout tinglvv/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: tl-124-arm
+          ref: main
           submodules: recursive
-          repository: tinglvv/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean tinglvv/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -1534,15 +1534,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout tinglvv/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: tl-124-arm
+          ref: main
           submodules: recursive
-          repository: tinglvv/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean tinglvv/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -1946,15 +1946,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout tinglvv/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: tl-124-arm
+          ref: main
           submodules: recursive
-          repository: tinglvv/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean tinglvv/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -2049,15 +2049,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout tinglvv/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: tl-124-arm
+          ref: main
           submodules: recursive
-          repository: tinglvv/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean tinglvv/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -2461,15 +2461,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout tinglvv/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: tl-124-arm
+          ref: main
           submodules: recursive
-          repository: tinglvv/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean tinglvv/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -2564,15 +2564,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout tinglvv/builder
+      - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: tl-124-arm
+          ref: main
           submodules: recursive
-          repository: tinglvv/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
-      - name: Clean tinglvv/builder checkout
+      - name: Clean pytorch/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
